--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@emailjs/browser": "^4.4.1",
     "@fontsource-variable/inter": "^5.1.0",
     "astro": "^4.16.6",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "wc-toast": "^1.3.1"
   }
 }
