--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emailjs/browser": "^4.4.1",
     "@fontsource-variable/inter": "^5.1.0",
     "astro": "^4.16.6",
+    "resend": "^4.0.1-alpha.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "wc-toast": "^1.3.1"
